--- a/Android-Social-Player-App/res/values/strings.xml
+++ b/Android-Social-Player-App/res/values/strings.xml
@@ -4,13 +4,18 @@
     <string name="app_name">Android-social-player</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-	<string name="Shuffle">Shuffle</string>
-	<string name="End">End</string>
-	<string name="musicDuration">0:00</string>
-	<string-array name="user_actions">
+    <string name="Shuffle">Shuffle</string>
+    <string name="End">End</string>
+    <string name="Wifi">Discover devices</string>
+    <string name="musicDuration">0:00</string>
+
+    <string-array name="user_actions">
         <item>Account</item>
         <item>Action 1</item>
         <item>Action 2</item>
         <item>Action 3</item>
     </string-array>
+
+    <string name="title_activity_discover_devices">DiscoverDevices</string>
+
 </resources>
